cmss/main/default/objects/NonLifeInsuranceRisk__c/NonLifeInsuranceRisk__c.object-meta.xml
<CustomObject>
    <label>Non Life Insurance Risk</label>
    <nameField>
        <label>Non Life Insurance Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Life Insurance Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>