cmss/main/default/objects/NonLifeInsuranceRisk__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Non Life Insurance Risks</relationshipLabel>
    <relationshipName>NonLifeInsuranceRisks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>