cmss/main/default/objects/NonLifeInsuranceRisk__c/fields/AssetID__c.field-meta.xml
<CustomField>
    <fullName>AssetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Číslo smlouvy</description>
    <label>Asset ID</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Non Life Insurance Risks</relationshipLabel>
    <relationshipName>Non_Life_Insurance_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>