cmss/main/default/objects/NonLifeInsuranceRisk__c/fields/DiscountInsurance__c.field-meta.xml
<CustomField>
    <fullName>DiscountInsurance__c</fullName>
    <label>Discount Insurance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>