cmss/main/default/objects/NonLifeInsuranceRisk__c/fields/DiscountInsuranceContract__c.field-meta.xml
<CustomField>
    <fullName>DiscountInsuranceContract__c</fullName>
    <label>Discount Insurance Contract</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>