cmss/main/default/objects/NonLifeInsuranceRisk__c/fields/InsurranceName__c.field-meta.xml
<CustomField>
    <fullName>InsurranceName__c</fullName>
    <label>Insurance Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>