cmss/main/default/objects/NonLifeInsuranceRisk__c/fields/LicencePlate__c.field-meta.xml
<CustomField>
    <fullName>LicencePlate__c</fullName>
    <description>Značka vozidla</description>
    <label>Licence Plate</label>
    <length>200</length>
    <type>Text</type>
</CustomField>