cmss/main/default/objects/NonLifeInsuranceRisk__c/fields/LimitAmount__c.field-meta.xml
<CustomField>
    <fullName>LimitAmount__c</fullName>
    <description>Výše limitu</description>
    <label>Limit Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>