cmss/main/default/objects/NonLifeInsuranceRisk__c/fields/ObjectID__c.field-meta.xml
<CustomField>
    <fullName>ObjectID__c</fullName>
    <label>Object ID</label>
    <referenceTo>NonLifeInsuranceObject__c</referenceTo>
    <relationshipLabel>Non Life Insurance Risks</relationshipLabel>
    <relationshipName>NonLifeInsuranceRisks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>