cmss/main/default/objects/NonLifeInsuranceRisk__c/fields/PremiumWithoutDiscount__c.field-meta.xml
<CustomField>
    <fullName>PremiumWithoutDiscount__c</fullName>
    <label>Premium Without Discount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>