cmss/main/default/objects/NonLifeInsuranceRisk__c/fields/RiskName__c.field-meta.xml
<CustomField>
    <fullName>RiskName__c</fullName>
    <label>Risk Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>