cmss/main/default/objects/NonLifeInsuranceRisk__c/fields/VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>VehicleModel__c</fullName>
    <description>Model vozidla</description>
    <label>Vehicle Model</label>
    <length>200</length>
    <type>Text</type>
</CustomField>